kubernetes/service-mesh.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: securevote-mtls
spec:
  mtls:
    mode: STRICT
