kubernetes/voting-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: voting-service
  template:
    metadata:
      labels:
        app: voting-service
    spec:
      containers:
        - name: voting-service
          image: securevote/voting-service:phase1
          ports:
            - containerPort: 8090
