kubernetes/nid_service_external.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-nid
spec:
  hosts:
    - nid.example.gov.pg
  location: MESH_EXTERNAL
  ports:
    - number: 443
      name: https
      protocol: TLS
